# hangman

./: LICENSE  README.md  hangman.cabal
src/: Ascii.hs  Logic.hs  Main.hs  Model.hs
