name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/freestingo/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              freestingo
maintainer:          nicolo.traini@oncode.it
copyright:           2021 freestingo
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  hs-source-dirs:      src
  exposed-modules:     Ascii
                     , Logic
                     , Model
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , ansi-terminal

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , ansi-terminal
